2000-05-12  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am: xe_sysdep.adb was VPATH-unfriendly.

2000-04-21  Laurent Pautet  <pautet@inf.enst.fr>

	* Makefile.am, Makefile.in, xe_defs.ads: Add info on support name
 	and specific data of default data storage in xe_defs.

	* xe.adb, xe.ads, xe_back.adb, xe_back.ads, xe_stdcnf.adb: Define
 	new attributes Passive and Storage. Replace attribute Storage_Dir
 	with Directory to avoid confusion with data storage for passive
 	partition. Keep Storage_Dir working for backward
 	compatibility. Minor reformatting.

	* xe_build.adb, xe_check.adb, xe_usage.adb: Minor reformating.

	* xe_lead.adb: Replace BOOT_SERVER with BOOT_LOCATION.

	* xe_stubs.adb: Move file and string operations to
 	xe_utils. Create a garlic storage configuration file like protocol
 	configuration file. If as a default, tcp is automatically loaded
 	on a partition, no storage support is automacally loaded for an
 	active partition. dfs is automatically loaded for a passive
 	partition. 

	* xe_utils.adb, xe_utils.ads: Get some procedures from
 	xe_stubs. Sort procedures in alphabetic order. Add names and
 	procedures to deal with data storages.

2000-03-25  Laurent Pautet  <pautet@inf.enst.fr>

	* Makefile.am: Fix the previous fix. Makefile.in is automatically
	built so the fix should appear in Makefile.am.

2000-03-24  Pascal Obry  <obry@gnat.com>

	* Makefile.in: Do not check for build directory for NT version
	xe_defs.adb. This was wrong anyway. Fixes 7524-002.

2000-03-15  Pascal Obry <obry@gnat.com>

	* xe_usage.adb: Update copyright notice
	
2000-03-01  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_usage.adb: Replace @gnat_version@ and @glade_version@ with
 	__gnat_version and __glade_version__.

2000-03-01  Laurent Pautet  <pautet@inf.enst.fr>

	* xe_stdcnf.adb, xe_back.adb, xe_back.ads: Add attribute Passive
 	to type Partition in order to provide passive partitions and not
 	only active partitions.
