@@ -14,7 +14,7 @@ RSH_OPT = @RSH_OPT@
 srcdir = @srcdir@
 
 bin_PROGRAMS = gnatdist
-gnatdist_DEPENDENCIES = xe_defs.o xe_sysdep.o sdefault.o
+gnatdist_DEPENDENCIES = xe_defs.o xe_sysdep.adb sdefault.o
 gnatdist_SOURCES =
 gnatdist_LDADD =
 
@@ -52,25 +52,28 @@ xe_defs.adb: Makefile
 	    echo "      return new String'("$$i"_Dir);"; \
 	  fi; \
 	  echo "   end Get_"$$i"_Dir;"; \
-	done >> xe_defs.adb; 
-	@echo "   function Get_Rsh_Command return String is" >>xe_defs.adb;
-	@echo "   begin" >>xe_defs.adb;
-	@echo "      return \"$(RSH_CMD)\";" >>xe_defs.adb;
-	@echo "   end Get_Rsh_Command;" >>xe_defs.adb;
-	@echo "" >>xe_defs.adb;
-	@echo "   function Get_Rsh_Options return String is" >>xe_defs.adb;
-	@echo "   begin" >>xe_defs.adb;
-	@echo "      return \"$(RSH_OPT)\";" >>xe_defs.adb;
-	@echo "   end Get_Rsh_Options;" >>xe_defs.adb;
-	@echo "   function Get_Def_Storage_Data return String is" >>xe_defs.adb;
-	@echo "   begin" >>xe_defs.adb;
-	@echo "      return \"$(DEFSTORAGEDATA)\";" >>xe_defs.adb;
-	@echo "   end Get_Def_Storage_Data;" >>xe_defs.adb;
-	@echo "   function Get_Def_Storage_Name return String is" >>xe_defs.adb;
-	@echo "   begin" >>xe_defs.adb;
-	@echo "      return \"$(DEFSTORAGENAME)\";" >>xe_defs.adb;
-	@echo "   end Get_Def_Storage_Name;" >>xe_defs.adb;
-	@echo "end XE_Defs;" >>xe_defs.adb;
+	done >> xe_defs.adb
+	@echo "   function Get_Rsh_Command return String is" >>xe_defs.adb
+	@echo "   begin" >>xe_defs.adb
+	@echo "      return \"$(RSH_CMD)\";" >>xe_defs.adb
+	@echo "   end Get_Rsh_Command;" >>xe_defs.adb
+	@echo "   function Get_Rsh_Options return String is" >>xe_defs.adb
+	@echo "   begin" >>xe_defs.adb
+	@echo "      return \"$(RSH_OPT)\";" >>xe_defs.adb
+	@echo "   end Get_Rsh_Options;" >>xe_defs.adb
+	@echo "   function Get_Def_Storage_Data return String is" >>xe_defs.adb
+	@echo "   begin" >>xe_defs.adb
+	@echo "      return \"$(DEFSTORAGEDATA)\";" >>xe_defs.adb
+	@echo "   end Get_Def_Storage_Data;" >>xe_defs.adb
+	@echo "   function Get_Def_Storage_Name return String is" >>xe_defs.adb
+	@echo "   begin" >>xe_defs.adb
+	@echo "      return \"$(DEFSTORAGENAME)\";" >>xe_defs.adb
+	@echo "   end Get_Def_Storage_Name;" >>xe_defs.adb
+	@echo "   function Get_Default_Optimization return String is" >> xe_defs.adb
+	@echo "   begin" >> xe_defs.adb
+	@echo "      return \"$(GNATDISTOPT)\";" >> xe_defs.adb
+	@echo "   end Get_Default_Optimization;" >> xe_defs.adb
+	@echo "end XE_Defs;" >>xe_defs.adb
 
 xe_defs.o: xe_defs.ads xe_defs.adb
 	$(ADA) -c -g -O2 -gnatp -I$(srcdir) -I$(GNATSRC) xe_defs.adb
