@@ -40,4 +40,6 @@ package XE_Defs is
    function Get_Def_Storage_Data return String;
    function Get_Def_Storage_Name return String;
 
+   function Get_Default_Optimization return String;
+
 end XE_Defs;
